# api/DTOs/SuppliesOrder/SuppliesOrderCreateDTO.cs
@@ -1,0 +1,10 @@
+namespace ArqNetCore.DTOs.SuppliesOrder
+{
+    public class SuppliesOrderCreateDTO
+    {
+        public string SupplyType { get; set; }
+        public string SupplyDescription { get; set; }
+        public string AreaId { get; set; }
+
+    }
+}
