# api/DTOs/SuppliesOrder/SuppliesOrderCreateResultDTO.cs
@@ -1,0 +1,8 @@
+namespace ArqNetCore.DTOs.SuppliesOrder
+{
+    public class SuppliesOrderCreateResultDTO
+    {
+        public string Id { get; set; }
+
+    }
+}
