# api/DTOs/SuppliesOrder/SuppliesOrderListDTO.cs
@@ -1,0 +1,11 @@
+namespace ArqNetCore.DTOs.SuppliesOrder
+{
+    public class SuppliesOrderListDTO
+    {
+        public string SupplyType { get; set; }
+        public string SupplyDescription { get; set; }
+        public string AreaId { get; set; }
+
+    }
+
+}
