# api/DTOs/SuppliesOrder/SuppliesOrderListResultDTO.cs
@@ -1,0 +1,13 @@
+namespace ArqNetCore.DTOs.SuppliesOrder
+{
+    public class SuppliesOrderListResultDTO
+    {
+        public SuppliesOrderListItemResultDTO[] items { get; set; }
+
+    }
+
+    public class SuppliesOrderListItemResultDTO
+    {
+        
+    }
+}
